[package]
name = "spark"
author = "Matt Nappo"
version = "0.1.0"
edition = "2021"
build = "build.rs"
about = "A personal keyserver and secret manager"

[[bin]]
name = "tests"
path = "src/tests.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
author = "Matt Nappo"
version = "0.1.0"
about = "A personal keyserver and secret manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }

bincode = "1.3.3"
serde = { version = "1.0.103", features = ["derive"] }
sled = "0.34.7"
lazy_static = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }

rand = "0.8.5"
hex = "0.4.3"
rsa = { version = "0.6.1", features = ["serde"] }
aes-gcm = "0.9.4"
rpassword = "7.0.0"

capnp = "0.16.0"
capnp-rpc = "0.16.1"
tokio = { version = "1.25.0", features = ["full", "net", "rt", "macros"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
futures = "0.3.26"
env_logger = "0.10.0"
log = "0.4.17"

[build-dependencies]
capnpc = "0.16.2"
