[package]
name = "testing_proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "testing_proto"
path = "src/main.rs"

[dependencies]
capnp = "0.16.0"
capnp-rpc = "0.16.1"
tokio = { version = "1.25.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
futures = "0.3.26"

[build-dependencies]
capnpc = "0.16.2"
